--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -354,8 +354,8 @@
     <string name="download_location_summ">Lokalizacja pobierania dla plików APK (tylko moduły)</string>
     <string name="restart_needed">Wymagane ponowne uruchomienie</string>
     <string name="cache_cleaned">Pamięć podręczna aplikacji została wyczyszczona. Wymagane ponowne uruchomienie</string>
-    <string name="update_download_list">Lista pobierania moduow zostanie wczytana w ciagu kilku sekund</string>
-    <string name="no_connection_available">Brak dostepnego polaczenia</string>
+    <string name="update_download_list">Lista pobierania modułów zostanie wczytana w ciągu kilku sekund</string>
+    <string name="no_connection_available">Brak dostępnego połączenia</string>
     <string name="activate_only">Tylko aktywuj</string>
 
 </resources>
